# src/Whisparr.Api.V3/Config/MediaManagementConfigController.cs
@@ -34,6 +34,8 @@ namespace Whisparr.Api.V3.Config
                                                       .SetValidator(seriesPathValidator)
                                                       .When(c => !string.IsNullOrWhiteSpace(c.RecycleBin));
 
+            SharedValidator.RuleFor(c => c.ScriptImportPath).IsValidPath().When(c => c.UseScriptImport);
+
             SharedValidator.RuleFor(c => c.MinimumFreeSpaceWhenImporting).GreaterThanOrEqualTo(100);
         }
 
