# src/Whisparr.Api.V3/openapi.json
@@ -8776,6 +8776,12 @@
           "copyUsingHardlinks": {
             "type": "boolean"
           },
+          "useScriptImport": {
+            "type": "boolean"
+          },
+          "scriptImportPath": {
+            "type": "string"
+          },
           "importExtraFiles": {
             "type": "boolean"
           },
